force-app/main/default/objects/Follow_Up_Question_Detail__c/Follow_Up_Question_Detail__c.object-meta.xml
<CustomObject>
    <description>Serves as a collector to hold &quot;records&quot; of complex followup questions</description>
    <label>Follow Up Question Detail</label>
    <nameField>
        <label>Follow Up Question Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Follow Up Question Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>