force-app/main/default/objects/Follow_Up_Question_Detail__c/fields/Follow_Up_Question__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Question__c</fullName>
    <label>Follow-Up Question</label>
    <referenceTo>Follow_Up_Question__c</referenceTo>
    <relationshipLabel>Follow Up Question Details</relationshipLabel>
    <relationshipName>Follow_Up_Question_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>