force-app/main/default/objects/Follow_Up_Question_Detail__c/fields/Number_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Questions__c</fullName>
    <label>Number of Questions</label>
    <summaryForeignKey>Follow_Up_Question_Data__c.Follow_Up_Question_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>