force-app/main/default/objects/Follow_Up_Question_Detail__c/fields/Number_of_Unanswered_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unanswered_Questions__c</fullName>
    <formula>Number_of_Questions__c -  Number_of_Questions_Answered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Unanswered Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>